# api/swagger/swagger.yaml
@@ -150,6 +150,7 @@ paths:
                   type: "string"
                 data:
                   type: "object"
+  /users/{id}/cart/{pID}:
     post:
       description: "Add Product to users cart"
       summary: "Add product to cart"
@@ -159,12 +160,18 @@ paths:
       produces:
       - "application/json"
       parameters:
-      - name: "cart details"
-        in: "body"
-        description: "details of item to be added to cart, user id and product id"
+      - name: "id"
+        in: "path"
+        description: "id of user"
         required: true
         schema:
-          type: "object"
+          type: "integer"
+      - name: "pID"
+        in: "path"
+        description: "id of product"
+        required: true
+        schema:
+          type: "integer"
       - name: "Authorization"
         in: "header"
         description: "authentication token"
@@ -190,7 +197,6 @@ paths:
                   type: "string"
                 data:
                   type: "object"
-  /users/{id}/cart/{pID}:
     delete:
       description: "delete a product from cart"
       summary: "Delete Product from Cart By Id"
